[package]
authors = ["Ferdinand Keller"]
edition = "2018"
name = "txture"
version = "0.1.1"

description = "A simple lib to generate cool textures"
repository = "https://github.com/ferdinandklr/txture"
readme = "README.md"
keyword = ["perlin", "noise", "texture", "generation"]
license = "MIT"

[dependencies]
rand = "0.7.2"

[dev-dependencies]
bmp = "0.5.0"
